Tests/bad/myBadTests/string_div.lat
// Author: Tomasz Biczel 277568
int main() {
  string x;
  x = "abc" / "efg";
  return 0;
}